# RITengine

./: .env.prod  .env.sample  .gitignore  Dockerfile  deploy.env  docker-compose.yml  entrypoint.sh  initsample.env  manage.py  nginx.conf  pyproject.toml  requirements.txt  search.py
src/: Dockerfile  functions.json  pyproject.toml  requirements.txt
src/RITengine/: __init__.py  admin.py  asgi.py  celery.py  throttles.py  urls.py  utils.py  wsgi.py
src/RITengine/settings/: base.py  dev.py  prod.py
src/bookmark/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/bookmark/migrations/: 0001_initial.py  0002_initial.py  0006_bookmark_updated_at.py  0007_remove_bookmark_message.py  0008_alter_bookmark_id.py
src/engine/: adapter.py  adapters.py  admin.py  base.py  constants.py  consumers.py  factories.py  filters.py  functions.json  functions.py  middleware.py  models.py  pagination.py  routing.py  serializers.py  services.py  tree.py  urls.py  utils.py  views.py
src/engine/adapters/: base_adapter.py  serpapi_adapter.py
src/engine/migrations/: 0001_initial.py  0002_initial.py  0003_enginecategory_engine_category.py  0003_remove_enginecategory_external_service_and_more.py  0004_alter_chat_slug.py  0004_enginecategory_is_default_and_more.py  0005_alter_chat_options.py  0006_alter_engine_external_service.py  0006_assist_created_at_assist_updated_at_and_more.py  0007_message_reply_to.py  0008_remove_message_reply_to_message_bookmark_collection.py  0009_remove_message_bookmark_collection_message_bookmark.py  0010_message_engines.py  0011_message_reply_to.py  0012_alter_chat_id.py  0013_enginecategory_base_prompt_and_more.py  0014_alter_enginecategory_external_service.py  0015_alter_engine_prompt.py  0016_alter_engine_category_and_more.py  0017_remove_enginecategory_base_prompt.py
src/inventions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/inventions/migrations/: 0001_initial.py  0002_form_fields.py  0003_form_slug_office_slug.py  0004_alter_form_office_alter_form_slug_alter_office_name_and_more.py  0005_alter_office_slug.py
src/legal/: admin.py  models.py  serializers.py  urls.py  views.py
src/legal/migrations/: 0001_initial.py  0002_alter_legaldocument_doc_type.py  0004_faqdocument_alter_legaldocument_doc_type.py
src/payment/: admin.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/payment/migrations/: 0001_initial.py  0002_customer_bookmarks_created_and_more.py  0003_rename_stripe_price_id_plan_stripe_product_id_and_more.py  0004_plan_bookmarks_limit_plan_engines_categories_and_more.py  0005_remove_planprice_trial_period_days.py  (+1 more)
src/project/: filters.py  models.py  serializers.py  urls.py  views.py
src/share/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/stats/: models.py  utils.py  views.py
src/user/: adapters.py  admin.py  exceptions.py  factories.py  managers.py  models.py  otp_devices.py  permissions.py  providers.py  serializers.py  services.py  signals.py  tasks.py  throttles.py  urls.py  utils.py  validators.py  views.py
(+173 files in other folders)
