[tool.poetry]
name = "ritengine"
version = "0.1.0"
description = ""
authors = ["Mazdak <me@mazdak.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
dj-rest-auth = {extras = ["with-social"], version = "^6.0.0"}
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
